# chocoplus

./: CMakeLists.txt  constraint.h  memory.h  signals.cc  signals.h  solver.h  sudoku.cc  test.cc  variable.h
constraints/: CMakeLists.txt  constraint.cc  constraint.h  eq.cc  eq.h  neq.cc  neq.h
contraintes/: CMakeLists.txt  constraint.cc  constraint.h  contraintes.h  eq.cc  eq.h  neq.cc  neq.h
memory/: AbstractStateBitSet.java  CMakeLists.txt  bitset  bui  bui.cc  environment.cc  environment.h  environmentstoredtype.h  stored.h  storedbitset.cc  storedbitset.h  storedbool.cc  storedbool.h  storedint.cc  storedint.h  storedlong.cc  storedlong.h  storedvector.h
solver/: CMakeLists.txt  c_queue.cc  c_queue.h  solver.cc  solver.h  val_chooser.cc  val_chooser.h  var_chooser.cc  var_chooser.h
variable/: CMakeLists.txt  intdomain.cc  intdomain.h  intvar.cc  intvar.h
